refactor(tournament): improve code clarity and consistency in tournament management